<resources>
    <string name="app_name">iFazidesk</string>iFazidesk/string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_ticket_details">""</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="title_activity_change_password">ChangePassword</string>


    <!--Login-->
    <string name="textview_poweredbyi2i">Powered by www.ifazig.com</string>
    <string name="textview_buildno">Build 1.2</string>
    <string name="edittext_hint_username">Username</string>
    <string name="edittext_hint_password">Password</string>
    <string name="checkbox_rememberme">Remember Me</string>
    <string name="button_login">Login</string>
    <string name="progress_loading">Loading.. Please Wait..</string>
    <string name="textview_forgotpassword">Forgot Password</string>
    <string name="textview_signin">Sign In</string>
    <string name="toast_loginsuccess">Login Success</string>
    <string name="toast_loginfailed">Login Failed</string>
    <string name="toast_invalidlogin">Invalid Credentials</string>
    <string name="toast_somethingwrong">Something went wrong</string>
    <string name="dialog_exitmsg">Do you want to exit application?</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_logout">Logout</string>
    <string name="spinner_selectlanguage">Select Language</string>
    <string name="title_newdashboard">iFazidesk Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
