<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:background="@drawable/menu_back"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"

        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            >

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/textview_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="English"
                    android:textColor="@color/bg_white"
                    android:gravity="center_vertical|right"
                    android:layout_alignParentRight="true"/>

                <TextView
                    android:id="@+id/textview_changelanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textview_language"
                    android:text="More..."
                    android:textColor="@color/bg_red"
                    android:textSize="12dp"
                    android:gravity="center_vertical|right"
                    android:layout_alignParentRight="true"/>

               <!-- <Spinner
                    android:id="@+id/spinner_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:spinnerMode="dialog"
                    android:backgroundTint="@color/bg_red"
                    android:layout_toRightOf="@+id/textview_changelanguage"
                    />-->


                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_height="200dp"
                    android:layout_width="200dp"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/ifazidesk"
                    android:scaleType="centerCrop"
                    android:background="@null"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    />
                <TextView
                    android:id="@+id/textview_signin"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/textview_signin"
                    android:background="@null"
                    android:textStyle="bold"
                    android:layout_below="@+id/img_logo"
                    android:layout_marginTop="10dp"
                    android:layout_alignLeft="@+id/img_logo"
                    android:layout_alignRight="@+id/img_logo"
                    android:gravity="center_horizontal"
                    android:textSize="30dp"
                    android:textColor="#FFFFFF"
                    />

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:inputType="textEmailAddress"
                    android:layout_below="@+id/textview_signin"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:paddingLeft="20dp"
                    android:gravity="center_vertical|left"
                    android:background="@drawable/drawable_edittext"
                    android:hint="@string/edittext_hint_username" />

                <LinearLayout
                    android:id="@+id/lt_input_password"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/input_email"
                    android:layout_alignLeft="@id/input_email"
                    android:layout_alignRight="@id/input_email"
                    android:background="@drawable/drawable_edittext"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/input_email"
                    android:layout_centerHorizontal="true"
                    android:inputType="textPassword"
                    android:layout_alignLeft="@id/input_email"
                    android:textColor="#000000"
                    android:paddingLeft="20dp"
                    android:gravity="center_vertical|left"
                    android:textStyle="bold"
                    android:background="@null"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/edittext_hint_password"/>

                <CheckBox
                    android:id="@+id/radiobutton_showpassword"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:layout_below="@+id/input_email"
                    android:layout_toRightOf="@+id/input_password"
                    android:layout_gravity="center_vertical"
                    android:button="@drawable/drawable_radiobutton" />

                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_below="@+id/lt_input_password"
                    android:layout_width="300dp"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:background="@drawable/drawable_button"
                    android:text="@string/button_login"/>

                <CheckBox
                    android:id="@+id/ch_rememberme"
                    android:layout_below="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/checkbox_rememberme"
                    android:textColor="#ffffff"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:checked="false" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/ch_rememberme"
                    android:layout_alignParentBottom="true">
                    <TextView
                        android:id="@+id/textview_forgotpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:textColor="@color/bg_red"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/textview_forgotpassword"/>
                </RelativeLayout>
            </RelativeLayout>
      </ScrollView>


    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>